# claude-cc

./: .gitignore  README.md  index.html  launch.bat  package-lock.json  package.json
docs/: session-timeline-spec.json
projects/: config.example.json  schema.json
scripts/: command-open-session.py  start-session.py
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: commands.rs  config.rs  lib.rs  main.rs  orchestrator.rs  output_parser.rs  persistence.rs  process_scanner.rs  pty_manager.rs  queue.rs  window_focus.rs
src/components/: CommandPalette.tsx  SessionBar.tsx  SetupScreen.tsx  Sidebar.tsx  SplitView.tsx  Terminal.tsx  TimelinePanel.tsx  ToolBar.tsx
src/hooks/: useProjects.ts  useSplitResize.ts  useTerminal.ts  useTimeline.ts
src/types/: index.ts  timeline.ts
