[package]
name = "claude-cc"
version = "0.1.0"
description = "Desktop control center for managing multiple Claude CLI sessions"
authors = []
edition = "2021"

[lib]
name = "claude_cc_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
portable-pty = "0.8"
sysinfo = "0.30"
tokio = { version = "1", features = ["full"] }
chrono = "0.4"

[dependencies.windows]
version = "0.58"
features = [
  "Win32_UI_WindowsAndMessaging",
  "Win32_Foundation",
]

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
